--- a/pages/Catalog.html
+++ b/pages/Catalog.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="../styles/common.css">
     <link rel="stylesheet" href="../styles/Catalog.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header class="header container">
@@ -53,34 +51,35 @@
         </ol>
     </section>   
     <section class="block__services container">
-            <ul class="block__services-list">
-                <li class="block__services-item">
-                    <img class="block__services-sweater" src="../images/Category/sweater.jpg" alt="block__services-pic">
-                    <a href="../pages/toys.html" class="block__services-link">APPAREL KIDS</a>
-                </li>
-                <li class="block__services-item block__services-sock">
-                    <img class="block__services-sock" src="../images/Category/Product-two.png" alt="services__list-pic">
-                    <a href="../pages/toys.html" class="block__services-link">HOLIDAY SHOP</a>
-                </li>
-                <li class="block__services-item block__services-deer">
-                    <img class="block__services-deer" src="../images/Category/Product_bkd-free.png" alt="services__list-pic">
-                    <a href="../pages/toys.html" class="block__services-link">TOYS</a>
-                </li>
-            </ul>
-            <ul class="block__services-aside">
-                <li class="block__services-item block__services-yeti-item">
-                    <img class="block__services-yeti" src="../images/Category/Product-four.png" alt="services__list-pic">
-                    <a href="../pages/toys.html" class="block__services-link">ACCESSORIES</a>
-                </li>
-                <li class="block__services-item block__services-flamingos-item">
-                    <img class="block__services-flamingos" src="../images/Category/flamingo.jpg" alt="services__list-pic">
-                    <a href="../pages/toys.html" class="block__services-link">SALE</a>
-                </li>
-                <li class="block__services-item">
-                    <img class="block__services-dress" src="../images/Category/dress.jpg" alt="services__list-pic">
-                    <a href="../pages/toys.html" class="block__services-link block__services-link-dress">APPAREL ADULTS</a>
-                </li>
-            </ul>   
+        <h2 class="block__services-title">services</h2>
+        <ul class="block__services-list">
+            <li class="block__services-item block__services-sweater-item">
+                <img class="block__services-sweater" src="../images/Category/sweater.jpg" alt="block__services-pic">
+                <a href="../pages/toys.html" class="block__services-link">APPAREL KIDS</a>
+            </li>
+            <li class="block__services-item block__services-sock-item">
+                <img class="block__services-sock" src="../images/Category/Product-two.png" alt="services__list-pic">
+                <a href="../pages/toys.html" class="block__services-link">HOLIDAY SHOP</a>
+            </li>
+            <li class="block__services-item block__services-deer-item">
+                <img class="block__services-deer" src="../images/Category/Product_bkd-free.png" alt="services__list-pic">
+                <a href="../pages/toys.html" class="block__services-link">TOYS</a>
+            </li>
+        </ul>
+        <ul class="block__services-aside">
+            <li class="block__services-item block__services-yeti-item">
+                <img class="block__services-yeti" src="../images/Category/Product-four.png" alt="services__list-pic">
+                <a href="../pages/toys.html" class="block__services-link">ACCESSORIES</a>
+            </li>
+            <li class="block__services-item block__services-flamingos-item">
+                <img class="block__services-flamingos" src="../images/Category/flamingo.jpg" alt="services__list-pic">
+                <a href="../pages/toys.html" class="block__services-link">SALE</a>
+            </li>
+            <li class="block__services-item block__services-dress-item">
+                <img class="block__services-dress" src="../images/Category/dress.jpg" alt="services__list-pic">
+                <a href="../pages/toys.html" class="block__services-link block__services-link-dress">APPAREL ADULTS</a>
+            </li>
+        </ul>   
     </section>
     <section class="block__desc container">
                 <h2 class="block__desc-subtitle" tabindex="0">PRODUCT DESCRIPTION</h2>
@@ -89,118 +88,108 @@
                 <p class="block__desc-text block__desc-text-free" tabindex="0">The set includes a miniature set of fashionable clothes, a hairbrush, a bottle for water, a pair of hairpins and elastic bands for hair, as well as two bracelets: one for the doll, the other for her young mistress.</p>
     </section>    
     <footer class="footer">
-        <div class="container block">
-            <section class="footer__title">
-                <ul class="footer__title-listfooter">
-                    <li class="footer__title-item">
-                        <p class="footer__title-text" tabindex="0">Navigation</p>
-                    </li>
-                    <li class="footer__title-item">
-                        <p class="footer__title-text" tabindex="0">Customer Information</p>
-                    </li>
-                    <li class="footer__title-item">
-                        <p class="footer__title-text" tabindex="0">Connect</p>
-                    </li>
-                </ul>
-            </section>
-            <section class="footer__info">
-                <ul class="footer__info-list">
-                    <li class="footer__info-item text">
-                        <a class="footer__info-link" href="#">About Us</a>
-                    </li>
-                    <li class="footer__info-item text">
-                        <a class="footer__info-link" href="#">Blog</a>
-                    </li>
-                    <li class="footer__info-item text">
-                        <a class="footer__info-link" href="#">Design Services</a>
-                    </li>
-                    <li class="footer__info-item text">
-                        <a class="footer__info-link" href="#">Featured On</a>
-                    </li>
-                    <li class="footer__info-item text">
-                        <a class="footer__info-link" href="#">2018 Holiday Catalog</a>
-                    </li>
-                    <li class="footer__info-item text">
-                        <a class="footer__info-link" href="#">Shop By Designer</a>
-                    </li>
-                </ul>
-                <ul class="footer__info-aside">   
-                    <li class="footer__info-item text">
-                        <a class="footer__info-link" href="#">Contact Us</a>
-                    </li>
-                    <li class="footer__info-item text">
-                        <a class="footer__info-link" href="#">Sale Exclusions</a>
-                    </li>
-                    <li class="footer__info-item text">
-                        <a class="footer__info-link" href="#">Shipping & Returns</a>
-                    </li>
-                    <li class="footer__info-item text">
-                        <a class="footer__info-link" href="#">Terms & Conditions</a>
-                    </li>
-                    <li class="footer__info-item text">
-                        <a class="footer__info-link" href="#">Privacy Policy</a>
-                    </li>
-                    <li class="footer__info-item text">
-                        <a class="footer__info-link" href="#">Search</a>
-                    </li>
-                </ul>
-                <ul class="footer__info-logo">
-                    <li class="footer__info-email">
-                        <form class="footer__info-form">
-                            <input class="footer__info-input" aria-label="0" type="email" name="Email" value="Email" required>
-                            <button class="footer__info-btn" tabindex="0" type="submit">JOIN</button>
-                        </form>
-                    </li>
-                    <li class="footer__info-icon">
-                        <a class="footer__info-link" href="#">
-                            <img class="footer__info-img" src="../images/footer/facebook.svg" alt="Logotype Facebook">
-                        </a>
-                    </li>
-                    <li class="footer__info-icon">
-                        <a class="footer__info-link" href="#">
-                            <img class="footer__info-img" src="../images/footer/twitter.svg" alt="Logotype Twitter">
-                        </a>
-                    </li>
-                    <li class="footer__info-icon">
-                        <a class="footer__info-link" href="#">
-                            <img class="footer__info-img" src="../images/footer/pinterest.svg" alt="Logotype Pinterest">
-                        </a>
-                    </li>
-                    <li class="footer__info-icon">
-                        <a class="footer__info-link" href="#">
-                            <img class="footer__info-img" src="../images/footer/instagram.svg" alt="Logotype Instagram">
-                        </a>
-                    </li>
-                </ul>
-            </section>
-            <section class="footer__subtitle">
-                <ul class="footer__subtitle-list">
-                    <li class="footer__subtitle-wrapper">
-                        <p class="subtitle__signature" tabindex="0">Company Rating</p>
-                        <div class="footer__subtitle-rating">
-                            <div class="footer__subtitle-items">
-                                <input class="footer__subtitle-item" id="rating__star-five" type="radio" name="rating" value="five">
-                                <label class="footer__subtitle-label" for="rating__star-five"></label>
-                                <input class="footer__subtitle-item" id="rating__star-four" type="radio" name="rating" value="four">
-                                <label class="footer__subtitle-label" for="rating__star-four"></label>
-                                <input class="footer__subtitle-item" id="rating__star-free" type="radio" name="rating" value="free">
-                                <label class="footer__subtitle-label" for="rating__star-free"></label>
-                                <input class="footer__subtitle-item" id="rating__star-two" type="radio" name="rating" value="two">
-                                <label class="footer__subtitle-label" for="rating__star-two"></label>
-                                <input class="footer__subtitle-item" id="rating__star-one" type="radio" name="rating" value="one">
-                                <label class="footer__subtitle-label" for="rating__star-one"></label>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="footer__subtitle-text">
-                        <p class="footer__subtitle-signature subtitle__signature-title">Copyright © 2018 Dlk • Design Life Kids</p>
-                    </li>
-                    <li class="footer__subtitle-text">
-                        <a class="footer__subtitle-signature footer__subtitle-direct" href="#"><p>Web Design — Direct Line Development</p></a>
-                    </li>
-                </ul>
-            </section>
-        </div>
+        <section class="footer__section container">
+            <h2 class="footer__subtitle-title">subtitle</h2>
+            <ul class="footer__section-items">
+                <li>
+                    <p class="footer__section-title" tabindex="0">Navigation</p>
+                </li>
+                <li class="footer__section-item footer__section-text">
+                    <a class="footer__section-link" href="#">About Us</a>
+                </li>
+                <li class="footer__section-item footer__section-text">
+                    <a class="footer__section-link" href="#">Blog</a>
+                </li>
+                <li class="footer__section-item footer__section-text">
+                    <a class="footer__section-link" href="#">Design Services</a>
+                </li>
+                <li class="footer__section-item footer__section-text">
+                    <a class="footer__section-link" href="#">Featured On</a>
+                </li>
+                <li class="footer__section-item footer__section-text">
+                    <a class="footer__section-link" href="#">2018 Holiday Catalog</a>
+                </li>
+                <li class="footer__section-item footer__section-text">
+                    <a class="footer__section-link" href="#">Shop By Designer</a>
+                </li>
+            </ul>
+            <ul class="footer__section-aside">
+                <li>
+                    <p class="footer__section-title" tabindex="0">Customer Information</p>
+                </li>   
+                <li class="footer__section-item">
+                    <a class="footer__section-link" href="#">Contact Us</a>
+                </li>
+                <li class="footer__section-item">
+                    <a class="footer__section-link" href="#">Sale Exclusions</a>
+                </li>
+                <li class="footer__section-item">
+                    <a class="footer__section-link" href="#">Shipping & Returns</a>
+                </li>
+                <li class="footer__section-item">
+                    <a class="footer__section-link" href="#">Terms & Conditions</a>
+                </li>
+                <li class="footer__section-item">
+                    <a class="footer__section-link" href="#">Privacy Policy</a>
+                </li>
+                <li class="footer__section-item">
+                    <a class="footer__section-link" href="#">Search</a>
+                </li>
+            </ul>
+            <div class="footer__section-div">
+                <p class="footer__section-title" tabindex="0">Connect</p>
+                <div>
+                    <form class="footer__section-form">
+                        <input class="footer__section-input" aria-label="0" type="email" name="Email" value="Email" required>
+                        <button class="footer__section-btn" tabindex="0" type="submit">JOIN</button>
+                    </form>
+                    <ul class="footer__section-logo">
+                        <li class="footer__section-icon">
+                            <a class="footer__section-link" href="#">
+                                <img class="footer__section-img" src="../images/footer/facebook.svg" alt="Logotype Facebook">
+                            </a>
+                        </li>
+                        <li class="footer__section-icon">
+                            <a class="footer__section-link" href="#">
+                                <img class="footer__section-img" src="../images/footer/twitter.svg" alt="Logotype Twitter">
+                            </a>
+                        </li>
+                        <li class="footer__section-icon">
+                            <a class="footer__section-link" href="#">
+                                <img class="footer__section-img" src="../images/footer/pinterest.svg" alt="Logotype Pinterest">
+                            </a>
+                        </li>
+                        <li class="footer__section-icon">
+                            <a class="footer__section-link" href="#">
+                                <img class="footer__section-img" src="../images/footer/instagram.svg" alt="Logotype Instagram">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>     
+        <section class="footer__subtitle container">
+            <h2 class="footer__subtitle-title">subtitle</h2>
+            <div class="footer__subtitle-wrapper">
+                <p class="footer__subtitle-signature" tabindex="0">Company Rating</p>
+                <div class="footer__subtitle-rating">
+                    <div class="footer__subtitle-items">
+                        <input class="footer__subtitle-item" id="rating__star-five" type="radio" name="rating" value="five">
+                        <label class="footer__subtitle-label" for="rating__star-five"></label>
+                        <input class="footer__subtitle-item" id="rating__star-four" type="radio" name="rating" value="four">
+                        <label class="footer__subtitle-label" for="rating__star-four"></label>
+                        <input class="footer__subtitle-item" id="rating__star-free" type="radio" name="rating" value="free">
+                        <label class="footer__subtitle-label" for="rating__star-free"></label>
+                        <input class="footer__subtitle-item" id="rating__star-two" type="radio" name="rating" value="two">
+                        <label class="footer__subtitle-label" for="rating__star-two"></label>
+                        <input class="footer__subtitle-item" id="rating__star-one" type="radio" name="rating" value="one">
+                        <label class="footer__subtitle-label" for="rating__star-one"></label>
+                    </div>
+                </div>
+            </div>
+            <p class="footer__subtitle-signature subtitle__signature-title">Copyright © 2018 Dlk • Design Life Kids</p>
+            <a class="footer__subtitle-signature footer__subtitle-direct" href="#"><p>Web Design — Direct Line Development</p></a>
+        </section>
     </footer>
 </body>
 </html>
